control de alineamiento: tecnicas de alineamiento antes de css grid - table-cell y position

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -63,6 +63,18 @@
                     <li>
                       Con <code>line-height</code>
                       <a href="/alineamiento/line-height.html">
+                        <i class="fas fa-link"></i>
+                      </a>
+                    </li>
+                    <li>
+                      Con <code>table-cell</code>
+                      <a href="/alineamiento/table-cell.html">
+                        <i class="fas fa-link"></i>
+                      </a>
+                    </li>
+                    <li>
+                      Con <code>position</code>
+                      <a href="/alineamiento/position.html">
                         <i class="fas fa-link"></i>
                       </a>
                     </li>
