--- a/alineamiento/position.html
+++ b/alineamiento/position.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Curso de CSS Grid Layout - Alineamiento con margin</title>
+    <title>Curso de CSS Grid Layout - Alineamiento con position</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +17,7 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./margin.css" />
+    <link rel="stylesheet" href="./position.css" />
   </head>
   <body>
     <header>
@@ -32,7 +32,7 @@
       <div class="container">
         <div class="py-4">
           <h1 class="mb-4">
-            Técnicas de Alineamiento antes de CSS Grid - <code>margin</code>
+            Técnicas de Alineamiento antes de CSS Grid - <code>position</code>
           </h1>
           <div class="row">
             <div class="col-xl-6">
@@ -107,10 +107,6 @@
 :root {
   --box-size: 180px;
   --element-size: 60px;
-  --center-element-top-margin: calc(
-    var(--box-size) / 2 - var(--element-size) / 2
-  );
-  --bottom-element-top-margin: calc(var(--box-size) - var(--element-size));
 }
 
 .wrapper {
@@ -120,40 +116,54 @@
 
 .box {
   height: var(--box-size);
+  position: relative;
 }
 
 .element {
   width: var(--element-size);
   height: var(--element-size);
+  position: absolute;
 }
 
 .box:nth-child(1) .element {
-  margin: 0;
+  top: 0;
+  left: 0;
 }
 .box:nth-child(2) .element {
-  margin: var(--center-element-top-margin) 0;
+  top: 50%;
+  left: 0;
+  transform: translate(0, -50%);
 }
 .box:nth-child(3) .element {
-  margin: var(--bottom-element-top-margin) 0;
+  left: 0;
+  bottom: 0;
 }
 .box:nth-child(4) .element {
-  margin: 0 auto;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 .box:nth-child(5) .element {
-  margin: var(--center-element-top-margin) auto;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 .box:nth-child(6) .element {
-  margin: var(--bottom-element-top-margin) auto;
+  left: 50%;
+  transform: translate(-50%, 0);
+  bottom: 0;
 }
 .box:nth-child(7) .element {
-  margin: 0 0 0 auto;
+  right: 0;
 }
 .box:nth-child(8) .element {
-  margin: var(--center-element-top-margin) 0 0 auto;
+  right: 0;
+  top: 50%;
+  transform: translate(0, -50%);
 }
 .box:nth-child(9) .element {
-  margin: var(--bottom-element-top-margin) 0 0 auto;
-}                                   
+  right: 0;
+  bottom: 0;
+}                                               
               </code></pre>
             </div>
           </div>
