--- a/alineamiento/table-cell.html
+++ b/alineamiento/table-cell.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Curso de CSS Grid Layout - Alineamiento con line-height</title>
+    <title>Curso de CSS Grid Layout - Alineamiento con table-cell</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +17,7 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./line-height.css" />
+    <link rel="stylesheet" href="./table-cell.css" />
   </head>
   <body>
     <header>
@@ -32,55 +32,54 @@
       <div class="container">
         <div class="py-4">
           <h1 class="mb-4">
-            Técnicas de Alineamiento antes de CSS Grid -
-            <code>line-height</code>
+            Técnicas de Alineamiento antes de CSS Grid - <code>table-cell</code>
           </h1>
           <div class="row">
-            <div class="col-xl-6" id="example">
+            <div class="col-xl-6">
               <div class="wrapper">
                 <div class="bg-light border box">
                   <div class="bg-secondary text-center text-white element">
-                    Top Left
+                    TL
                   </div>
                 </div>
                 <div class="bg-light border box">
                   <div class="bg-secondary text-center text-white element">
-                    Center Left
+                    CL
                   </div>
                 </div>
                 <div class="bg-light border box">
                   <div class="bg-secondary text-center text-white element">
-                    Bottom Left
+                    BL
                   </div>
                 </div>
                 <div class="bg-light border box">
                   <div class="bg-secondary text-center text-white element">
-                    Top Center
+                    TC
                   </div>
                 </div>
                 <div class="bg-light border box">
                   <div class="bg-secondary text-center text-white element">
-                    Center Center
+                    CC
                   </div>
                 </div>
                 <div class="bg-light border box">
                   <div class="bg-secondary text-center text-white element">
-                    Bottom Center
+                    BC
                   </div>
                 </div>
                 <div class="bg-light border box">
                   <div class="bg-secondary text-center text-white element">
-                    Top Right
+                    TR
                   </div>
                 </div>
                 <div class="bg-light border box">
                   <div class="bg-secondary text-center text-white element">
-                    Center Right
+                    CR
                   </div>
                 </div>
                 <div class="bg-light border box">
                   <div class="bg-secondary text-center text-white element">
-                    Bottom Right
+                    BR
                   </div>
                 </div>
               </div>
@@ -88,27 +87,20 @@
             <div class="col-xl-6">
               <pre><code>
 :root {
-  --box-size: 180px;
-  --element-size: 60px;
-  --lines: 2;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  font-size: 1.1em; /* para que todos los textos ocupen dos líneas */
+  --box-size: 90px;
+  --element-size: 30px;
 }
 
 .box {
   height: var(--box-size);
-  line-height: var(--box-size);
+  width: var(--box-size);
+  display: table-cell;
 }
 
 .element {
   width: var(--element-size);
   height: var(--element-size);
   display: inline-block;
-  line-height: calc(var(--element-size) / var(--lines));
 }
 
 .box:nth-child(1),
@@ -127,15 +119,15 @@
   text-align: right;
 }
 
-.box:nth-child(3n + 1) .element {
+.box:nth-child(3n + 1) {
   vertical-align: top;
 }
-.box:nth-child(3n + 2) .element {
+.box:nth-child(3n + 2) {
   vertical-align: middle;
 }
-.box:nth-child(3n + 3) .element {
+.box:nth-child(3n + 3) {
   vertical-align: bottom;
-}                                                 
+}                                                
               </code></pre>
             </div>
           </div>
