--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                         <i class="fas fa-link"></i>
                       </a>
                     </li>
+                    <li>
+                      Propiedades físicas y lógicas
+                      <a href="/alineamiento/propiedades-logicas.html">
+                        <i class="fas fa-link"></i>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </div>
