--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                         <i class="fas fa-link"></i>
                       </a>
                     </li>
+                    <li>
+                      Con Flexbox
+                      <a href="/alineamiento/flexbox.html">
+                        <i class="fas fa-link"></i>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </div>
