--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
                         <i class="fas fa-link"></i>
                       </a>
                     </li>
+                    <li>
+                      Dibujemos con CSS
+                      <a href="/alineamiento/dibujo.html">
+                        <i class="fas fa-link"></i>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </div>
