propiedades y valores para los elementos hijos: ubicacion

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   aria-expanded="true"
                   aria-controls="collapseOne"
                 >
-                  Quiz's
+                  Retos
                 </button>
               </h2>
               <div
@@ -155,6 +155,39 @@
                     <li>
                       Alineamiento en el elemento contenedor
                       <a href="/elemento-padre/alineamiento.html">
+                        <i class="fas fa-link"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <h2 class="mb-4">Propiedades y valores para los elementos hijos</h2>
+          <div class="mb-4 accordion" id="accordion3">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#accordion3 #collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne"
+                >
+                  Retos
+                </button>
+              </h2>
+              <div
+                id="collapseOne"
+                class="accordion-collapse collapse show"
+                aria-labelledby="headingOne"
+              >
+                <div class="accordion-body">
+                  <ul>
+                    <li>
+                      Ubicacion
+                      <a href="/elementos-hijos/ubicacion.html">
                         <i class="fas fa-link"></i>
                       </a>
                     </li>
