--- a/elemento-padre/alineamiento.html
+++ b/elemento-padre/alineamiento.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Curso de CSS Grid Layout - Alineamiento con margin</title>
+    <title>
+      Curso de CSS Grid Layout - Alineamiento en el elemento contenedor
+    </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
